fix: align username dropdown toggle to top in mobile navbar

--- a/mywhiskies/static/css/main.css
+++ b/mywhiskies/static/css/main.css
@@ -122,6 +122,7 @@ a:focus, a:hover {
     border-radius: 0 !important;
     padding: 0 !important;
     width: auto !important;
+    align-items: flex-start !important;
   }
 }
 
